--- a/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Depots" asp-action="Add">Добавить депо</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Index">Настройки</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Settings" asp-action="Index">Настройки</a>
                         </li>
                     </ul>
                 </div>
