--- a/VehicleRoutesBuildingWebApplication/Views/Settings/Change.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Settings/Change.cshtml
@@ -1,10 +1,10 @@
-﻿@model VehicleRoutesBuildingWebApplication.Models.VehicleViewModels.AddVehicleViewModel
+﻿@model VehicleRoutesBuildingWebApplication.Models.SettingsViewModels.ChangeSettingsViewModel
 @{
-    ViewData["Title"] = "Создание транспортных средств";
+    ViewData["Title"] = "Настройки алгоритма";
 }
 
 <h1>Настройки алгоритма</h1>
-<form method="post" action="Add" class="mt-5">
+<form method="post" action="Change" class="mt-5">
     <div class="mb-3">
         <label for="" class="form-label">Грузоподъемность</label>
         <input type="number" id="capacityBox" class="form-control" asp-for="Capacity" />
@@ -16,6 +16,10 @@
     <div class="mb-3">
         <label for="" class="form-label">Количество итераций</label>
         <input type="number" id="iterationsBox" class="form-control" asp-for="Iterations" />
+    </div>
+    <div class="mb-3">
+        <label for="" class="form-label">Стоимость 1л топлива</label>
+        <input type="number" id="fuelCostBox" class="form-control" asp-for="FuelCost" />
     </div>
     <button type="submit" id="sendBtn" class="btn btn-primary" style="margin-top: 10px; width: 200px; color: black; background-color: white; border-color: black;">Изменить</button>
 
